--- a/index.html
+++ b/index.html
@@ -247,12 +247,13 @@
             }
         });
 
+        // index.html의 addMessage 함수 부분을 아래 내용으로 교체하세요.
+
         function addMessage(data) {
             if (!data || (data.room && data.room !== currentRoom)) return;
             const list = document.getElementById('messages');
             const item = document.createElement('li');
 
-            // 1. 시스템 메시지 처리 (기존 유지)
             if (data.name === '시스템' || data.type === 'system') {
                 item.style.cssText = "align-self:center; background:rgba(0,0,0,0.08); color:#555; font-size:0.8rem; border-radius:20px; padding:5px 15px; margin:10px 0; text-align:center;";
                 item.textContent = data.text;
@@ -264,42 +265,31 @@
             const isMy = (data.name === userName);
             item.className = isMy ? 'my-msg' : 'other-msg';
 
-            // 우클릭 이벤트 리스너 (모바일은 꾹 누르기, PC는 우클릭)
+            // 우클릭 이벤트
             item.oncontextmenu = (e) => {
                 e.preventDefault();
-                // 마우스 위치(e.pageX)가 없으면 터치 위치를 잡는 로직 추가
                 const posX = e.pageX || (e.touches ? e.touches[0].pageX : 0);
                 const posY = e.pageY || (e.touches ? e.touches[0].pageY : 0);
                 showContextMenu(posX, posY, data, isMy);
             };
 
-            // 2. 이미지 크기 조절: 최대 높이를 설정하여 너무 크게 보이지 않게 함
             let content = "";
             if (data.type === 'image') {
-                // ⭐️ onclick 부분을 아래와 같이 수정하세요.
-                content = `<img src="${data.text}" 
-                style="max-width:200px; max-height:300px; border-radius:10px; display:block; object-fit:contain; cursor:pointer;" 
-                onclick="openImageInNewTab('${data.text}')">`;
+                content = `<img src="${data.text}" style="max-width:200px; max-height:300px; border-radius:10px; display:block; object-fit:contain; cursor:pointer;" onclick="openImageInNewTab('${data.text}')">`;
             } else {
                 content = `<span>${data.text || ""}</span>`;
             }
 
             const timeStr = data.time || "";
-
-            // 3. 읽음 숫자 디자인 변경: 노란색 -> 네이비(#2c3e50), 0일 때는 숨김
-            // read_count가 0보다 클 때만 표시
             const readBadge = (data.read_count > 0) ? `<span style="color:#2c3e50; font-size:0.75rem; font-weight:bold; margin-bottom:2px;">${data.read_count}</span>` : '';
 
-            // const deleteBtn = isMy ? `<span style="cursor:pointer; font-size:0.7rem; color:red; margin-top:2px;" onclick="deleteMsg(${data.id})">삭제</span>` : '';
-
+            // ⭐️ 중요: deleteBtn 정의 오류 수정 (빈 문자열로 처리하거나 우클릭 메뉴로 대체)
             const info = `<div id="info-${data.id}" style="position:absolute; bottom:0; ${isMy ? 'left:-55px; align-items:flex-end;' : 'right:-55px; align-items:flex-start;'} display:flex; flex-direction:column; width:50px;">
                 ${readBadge}
                 <span style="color:#aaa; font-size:0.6rem;">${timeStr}</span>
-                ${deleteBtn}
             </div>`;
 
-            item.id = `msg-${data.id}`; // 메시지에 고유 ID 부여
-
+            item.id = `msg-${data.id}`;
             item.innerHTML = isMy ? `${content}${info}` : `<small style="display:block; margin-bottom:4px; color:#777;">${data.name}</small>${content}${info}`;
 
             list.appendChild(item);
