--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
             document.onclick = () => { menu.style.display = 'none'; };
         }
 
+        // 기존 menuAction 함수를 아래 내용으로 덮어쓰세요
         function menuAction(action) {
             if (!selectedMsgData) return;
 
@@ -475,8 +476,8 @@
                     input.focus();
                     break;
                 case 'like':
-                    alert('이 메시지에 공감했습니다! ❤️');
-                    // 나중에 서버에 공감 카운트 올리는 로직 추가 가능
+                    // ⭐️ 수정: alert 대신 서버로 좋아요 이벤트를 보냅니다.
+                    socket.emit('like message', selectedMsgData.id);
                     break;
                 case 'share':
                     const textToCopy = selectedMsgData.type === 'image' ? '[이미지]' : selectedMsgData.text;
@@ -491,6 +492,20 @@
             }
             document.getElementById('context-menu').style.display = 'none';
         }
+
+        // 서버에서 공감 업데이트 신호를 받았을 때 화면 갱신
+        socket.on('update likes', (data) => {
+            const likeBox = document.querySelector(`#like-${data.id}`);
+            if (likeBox) {
+                const countSpan = likeBox.querySelector('span');
+                likeBox.style.display = 'flex'; // 숨겨져 있던 하트 보이기
+                countSpan.textContent = data.likes; // 숫자 업데이트
+
+                // 클릭 시 통통 튀는 애니메이션 (선택사항)
+                likeBox.style.transform = 'scale(1.2)';
+                setTimeout(() => { likeBox.style.transform = 'scale(1)'; }, 200);
+            }
+        });
     </script>
 </body>
 
